fixed shifting

--- a/style.less
+++ b/style.less
@@ -31,6 +31,9 @@
 .tip {
     // margin: 20px;
     // padding: 10px;
+    .t {
+        padding: 10px;
+    }
 }
 
 .bdr(@color: red) {
@@ -95,7 +98,7 @@ a {
  position: relative;
     .width(1200px);
     // .bdr(rgb(9, 61, 75));
-    height: 400px;
+    height: 300px;
     .mg();
     background-color: rgba(155, 150, 150, 0.363);
 }
@@ -168,24 +171,26 @@ a {
 
             // border-radius: 40px;
             &--lt {
-                top: -10px;
-                left: -10px;
+                top: 0px;
+                left: 0px;
             }
 
             &--rt {
-                top: -10px;
-                right: -10px;
+                top: 0px;
+                right: 0px;
             }
 
             &--lb {
                 bottom: 0px;
-                left: -10px;
+                left: 0px;
+                width: 40px;
+                height: 40px;
                 background-color: brown;
             }
 
             &--rb {
                 bottom: 0px;
-                right: -10px;
+                right: 0px;
             }
         }
 
@@ -201,7 +206,7 @@ a {
 
             &--top {
                 height: 10px;
-                top: -10px;
+                top: 0px;
                 left: 45%;
             }
 
@@ -214,14 +219,14 @@ a {
             &--left {
                 transform: rotate(90deg);
                 top: 45%;
-                left: -25px;
+                left: -15px;
                 height: 10px;
             }
 
             &--right {
                 transform: rotate(90deg);
                 top: 45%;
-                right: -25px;
+                right: -15px;
             }
 
         }
